@@ -1,3 +1,9 @@
+2018-07-03 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-2767.c:
+	  Fix bug #2767.
+
 2018-07-02 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-2764.c:
